# f110-2019-d

./: .gitignore  .gitmodules  README.md
amrita_ws/devel/: .catkin  .rosinstall  setup.sh
amrita_ws/devel/include/beginner_tutorials/: AddTwoIntsRequest.h
amrita_ws/devel/lib/beginner_tutorials/: listener  talker
amrita_ws/devel/lib/pkgconfig/: beginner_tutorials.pc
amrita_ws/install/: .rosinstall  setup.sh
amrita_ws/install/include/beginner_tutorials/: AddTwoIntsResponse.h  Num.h
amrita_ws/src/beginner_tutorials/bagfiles/: 2019-04-10-01-51-55.bag  sadarangani_velonly.bag  subset.bag
amrita_ws/src/sadarangani_runtime_monitoring/: CMakeLists.txt
amrita_ws/src/sadarangani_runtime_monitoring/src/: talker.cpp
jewelln_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
jewelln_ws/devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
jewelln_ws/devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  talker
jewelln_ws/devel/lib/jewelln_runtime_monitoring/: jewelln_average
jewelln_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  jewelln_runtime_monitoring.pc
jewelln_ws/install/: .rosinstall  local_setup.sh  setup.sh
jewelln_ws/install/lib/pkgconfig/: beginner_tutorials.pc  jewelln_runtime_monitoring.pc
jewelln_ws/install/share/jewelln_runtime_monitoring/: package.xml
jewelln_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
jewelln_ws/src/beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  talker.cpp
jewelln_ws/src/jewelln_runtime_monitoring/: CMakeLists.txt
jewelln_ws/src/jewelln_runtime_monitoring/msg/: Vel.msg
jewelln_ws/src/jewelln_runtime_monitoring/src/: jewelln_average.cpp
khuntets_ws/: params.yaml
khuntets_ws/bagfiles/: 2019-04-11-16-43-57.bag  subset.bag
khuntets_ws/devel/: .catkin  .rosinstall  setup.sh
khuntets_ws/devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  talker
khuntets_ws/devel/lib/pkgconfig/: beginner_tutorials.pc
khuntets_ws/install/: _setup_util.py  setup.sh
khuntets_ws/install/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
khuntets_ws/khuntets_runtime_monitoring/: CMakeLists.txt  package.xml
khuntets_ws/src/beginner_tutorials/: CMakeLists.txt
kmeans/: CMakeLists.txt  package.xml
kmeans/launch/: kmeans.launch
layng_runtime_monitoring/: CMakeLists.txt  package.xml
layng_runtime_monitoring/src/: layng_average.cpp
layng_ws/bags/: layng_velonly.bag  subset.bag
layng_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
pemdas_gap_finding/src/: find_k.py  pemdas_gap_finding.cpp
ros/: README
ros/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros/devel/include/ackermann_msgs/: AckermannDrive.h  AckermannDriveStamped.h
ros/devel/include/vesc_msgs/: VescState.h  VescStateStamped.h
ros/src/: .rosinstall  .rosinstall.bak  https:--github.com-sabotagelab-f110-2019-.txt
ros/src/lidar_filtering/: CMakeLists.txt  package.xml
ros/src/pemdas_gap_finding/: CMakeLists.txt  package.xml  setup.py
ros/src/pemdas_gap_finding/launch/: pemdas_gap_finding.launch
ros/src/pemdas_gap_finding/msg/: Gap.msg  Gaps.msg  LidarPoint.msg
ros/src/pemdas_gap_finding/nodes/: laser_tf.py
ros/src/pemdas_gap_finding/scripts/: find_gap.py  find_gap_blayng.py  findk.py  gap_finding.py  pemdas_gap_finding.py  scan.py  transferfunc.py  visualize_gaps_all.py
ros/src/pemdas_gap_finding/src/: pemdas_gap_finding.cpp
ros/src/pemdas_gap_finding/src/algorithms/: .process.py.swp  __init__.py  findk.py  process.py  scan.py  transferfunc.py
ros/src/pemdas_runtime_monitoring/: CMakeLists.txt  package.xml
ros/src/pemdas_runtime_monitoring/src/: pemdas_average_vesc.cpp
(+84 files in other folders)
